dev-deployment/portainer-template.yaml
---
# Source: portainer/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
# Source: portainer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: 'ce-latest-ee-2.19.5'
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
      # nodePort: 30777
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: https
      # nodePort: 30779
    - port: 30776
      targetPort: 30776
      protocol: TCP
      name: edge
      # nodePort: 30776
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
---
# Source: portainer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
  labels:
    io.portainer.kubernetes.application.stack: portainer
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/version: 'ce-latest-ee-2.19.5'
spec:
  replicas: 1
  strategy:
    type: 'Recreate'
  selector:
    matchLabels:
      app.kubernetes.io/name: portainer
      app.kubernetes.io/instance: portainer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portainer
        app.kubernetes.io/instance: portainer
    spec:
      nodeSelector: {}
      serviceAccountName: portainer-sa-clusteradmin
      volumes:
        - name: 'data'
          persistentVolumeClaim:
            claimName: portainer
      containers:
        - name: portainer
          image: 'portainer/portainer-ce:2.19.5'
          imagePullPolicy: Always
          args:
            - '--tunnel-port=30776'
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: tcp-edge
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /
              port: 9443
              scheme: HTTPS
          resources: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
  labels:
    name: portainer
  annotations:
    cert-manager.io/cluster-issuer: 'selfsigned-ca'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portainer.$DOMAIN
      secretName: portainer.$DOMAIN
  rules:
    - host: portainer.$DOMAIN
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: portainer
                port:
                  number: 9000
